blue-green/bluegreen-ro.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sleep-rollout
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sleep-app
  template:
    metadata:
      labels:
        app: sleep-app
    spec:
      containers:
        - name: sleep-container
          image: busybox
          command:
            - /bin/sh
            - -c
            - "echo 'Sleeping forever...' && sleep infinity"
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: sleep-active
      previewService: sleep-preview
      autoPromotionEnabled: true
      prePromotionAnalysis:
        templates:
          - templateName: sleep-analysis
