blue-green/bluegreen-ing.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen
spec:
  rules:
  - host: bluegreen-preview.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-preview
            port:
              name: http
  - host: bluegreen.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen
            port:
              name: http
